# photon

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  REMAINING.md  ROADMAP.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
companion/: Cargo.toml  README.md
companion/build-aux/: app.photon.Companion.json
companion/shell-extension/photon-companion@photon.app/: extension.js  metadata.json
companion/src/: api.rs  main.rs  runtime.rs
mobileapp/: README.md  pubspec.yaml
mobileapp/lib/: main.dart
mobileapp/test/: widget_test.dart
photon-ml/: Cargo.toml  Dockerfile  README.md  fetch-models.sh
photon-ml/src/: clip.rs  config.rs  faces.rs  inpaint.rs  main.rs  ocr.rs  segment.rs  state.rs
photon-plugin-proto/: Cargo.toml  build.rs
photon-plugin-proto/proto/: photon_plugin.proto
photon-plugin-proto/src/: lib.rs
photon-plugin-sdk/: Cargo.toml  README.md
photon-plugin-sdk/src/: api.rs  lib.rs
plugins/example-hello-job/: Cargo.toml
plugins/example-hello-job/src/: main.rs
plugins/example-stats-route/: Cargo.toml
plugins/example-stats-route/src/: main.rs
plugins/example-watermark-editor/: Cargo.toml
plugins/example-watermark-editor/src/: main.rs
plugins/immich-import/: Cargo.toml
plugins/immich-import/src/: main.rs  ui.html
server/: Cargo.toml  Dockerfile
server/docs/: MCP.md
server/migrations/: 0001_init.sql  0002_ai_analysis.sql  0003_embeddings.sql  0004_partners.sql  0005_faces.sql  0006_kinship.sql  0007_sessions.sql  0008_id_sequence.sql  0009_import_batches.sql  0010_duplicate_groups.sql  0011_job_runs.sql  0012_public_links.sql  0013_totp.sql  0014_oidc_states.sql  0015_passkeys.sql  0016_people_studio.sql  0017_face_confirmed.sql  0018_totp_usage.sql
server/src/: analyze.rs  auth.rs  db.rs  dlna.rs  extract.rs  handlers.rs  jobs.rs  mailer.rs  main.rs  mcp.rs  ml.rs  models.rs  oidc.rs  state.rs  storage.rs  transcode.rs  webauthn.rs
server/src/plugins/: handshake.rs  mod.rs
ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
ui/src/: App.svelte  main.ts
ui/src/lib/: actions.ts  api.ts  cast.ts  logo.ts  media.ts  passkey.ts  print.ts  session.ts  toast.svelte.ts  upload.svelte.ts
ui/src/lib/components/: AccountSwitcher.svelte  AddPhotosModal.svelte  AdminConsole.svelte  AdminModal.svelte  AlbumPickerModal.svelte  Constellation.svelte  Editor.svelte  Explore.svelte  Feed.svelte  InfoPanel.svelte  Lightbox.svelte  LoginScreen.svelte  Logo.svelte  Modal.svelte  PasskeyModal.svelte  PeopleBrowse.svelte  PeopleStudio.svelte  PhotoTile.svelte  PlacesMap.svelte  SharingModal.svelte  Sidebar.svelte  StatusBar.svelte  StorageModal.svelte  Toaster.svelte  Topbar.svelte  UploadPanel.svelte  VaultModal.svelte
ui/src/lib/icons/: Icon.svelte
ui/src/styles/: kit.css  photon.css
ui/src/styles/tokens/: base.css  colors.css  elevation.css  fonts.css  motion.css  spacing.css  typography.css
