[package]
name = "photon-plugin-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
photon-plugin-proto = { path = "../photon-plugin-proto" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
# The author logs with plain `tracing::info!/warn!/…`. serve() installs a JSON
# subscriber writing to STDERR (stdout is reserved for the handshake line); the
# host parses those JSON lines back into its own native tracing logger at the
# matching level. `json` for the structured format, `env-filter` so the author
# can tune verbosity via RUST_LOG.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Photon API client (`PhotonClient`): plugins call BACK into Photon over HTTP
# using the endpoint + token the host injects. rustls (no OpenSSL) + json, to
# match the server's stack and stay offline-friendly.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
